# tacc-reproducible-automation-2023

./: pyproject.toml
docs/: 01-introduction.rst  02-create-app.rst  02-docker-tangent.rst  03-abaco.rst  04-troubleshooting.rst  conf.py  index.rst
docs/assets/: actor.ini  app.json  config.yml  frontera.json  job.json  project.ini  reactor.py  reactor.rc  storage.json
