[tool.poetry]
name = "tacc-reproducible-automation-summer-2020"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
sphinx = "^3.1.2"
sphinx-rtd-theme = "^0.5.0"
sphinx-autobuild = "^0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
